--- a/.azure-pipelines/auto.fanout.yml
+++ b/.azure-pipelines/auto.fanout.yml
@@ -209,6 +209,7 @@ jobs:
   #     # https://dev.azure.com/rust-lang-azure/rust/_build/results?buildId=145
 
   # - template: steps/macos.yml 
+  - bash: $TAR_COMMAND -tvf $TEMP/drop.tar
   - bash: $TAR_COMMAND -xf $TEMP/drop.tar
   - bash: rm $TEMP/drop.tar
   - script: |
@@ -275,74 +276,74 @@ jobs:
         ARTIFACT_NAME: x86_64-msvc-build
         SCRIPT: make ci-resume-subset-G
 
-# # macOS JOBS
-# - job: macOS
-#   timeoutInMinutes: 600
-#   variables:
-#     TAR_COMMAND: gtar
-#   pool:
-#     vmImage: macos-10.13
-#   steps:
-#   - checkout: self
-#     fetchDepth: 2
-#   - template: steps/macos.yml  
-#   strategy:
-#     matrix:
-#       x86_64-apple:
-#         RUST_CHECK_TARGET: check
-#         RUST_CONFIGURE_ARGS: --build=x86_64-apple-darwin --enable-sanitizers --enable-profiler --set rust.jemalloc
-#         RUSTC_RETRY_LINKER_ON_SEGFAULT: 1
-#         MACOSX_DEPLOYMENT_TARGET: 10.8
-#         MACOSX_STD_DEPLOYMENT_TARGET: 10.7
-#         NO_LLVM_ASSERTIONS: 1
-#         NO_DEBUG_ASSERTIONS: 1
+# macOS JOBS
+- job: macOS
+  timeoutInMinutes: 600
+  variables:
+    TAR_COMMAND: gtar
+  pool:
+    vmImage: macos-10.13
+  steps:
+  - checkout: self
+    fetchDepth: 2
+  - template: steps/macos.yml  
+  strategy:
+    matrix:
+      x86_64-apple:
+        RUST_CHECK_TARGET: check
+        RUST_CONFIGURE_ARGS: --build=x86_64-apple-darwin --enable-sanitizers --enable-profiler --set rust.jemalloc
+        RUSTC_RETRY_LINKER_ON_SEGFAULT: 1
+        MACOSX_DEPLOYMENT_TARGET: 10.8
+        MACOSX_STD_DEPLOYMENT_TARGET: 10.7
+        NO_LLVM_ASSERTIONS: 1
+        NO_DEBUG_ASSERTIONS: 1
 
-# - job: macOS_build
-#   timeoutInMinutes: 600
-#   variables:
-#     TAR_COMMAND: gtar
-#   pool:
-#     vmImage: macos-10.13
-#   steps:
-#   - checkout: self
-#     fetchDepth: 2
-#   - template: steps/macos.yml
-#   - script: |
-#       set -x
+- job: macOS_build
+  timeoutInMinutes: 600
+  variables:
+    TAR_COMMAND: gtar
+  pool:
+    vmImage: macos-10.13
+  steps:
+  - checkout: self
+    fetchDepth: 2
+  - template: steps/macos.yml
+  - script: |
+      set -x
 
-#       git submodule
-#       export SUBMODULES_EXCLUDES=$(git submodule | grep -Eow 'src/[^ ]+' | sed 's/\(.*\)/--exclude=\1\/\.git/')
-#       echo $SUBMODULES_EXCLUDES
+      git submodule
+      export SUBMODULES_EXCLUDES=$(git submodule | grep -Eow 'src/[^ ]+' | sed 's/\(.*\)/--exclude=\1\/\.git/')
+      echo $SUBMODULES_EXCLUDES
 
-#       $TAR_COMMAND --exclude=.git $SUBMODULES_EXCLUDES -cf /tmp/drop.tar .
-#   - task: PublishPipelineArtifact@0
-#     inputs:
-#       artifactName: $(System.JobDisplayName)
-#       targetPath: '/tmp/drop.tar'
+      $TAR_COMMAND --exclude=.git $SUBMODULES_EXCLUDES -cf /tmp/drop.tar .
+  - task: PublishPipelineArtifact@0
+    inputs:
+      artifactName: $(System.JobDisplayName)
+      targetPath: '/tmp/drop.tar'
 
-#   strategy:
-#     matrix:
-#       # macOS builders. These are placed near the beginning because they are very
-#       # slow to run.
+  strategy:
+    matrix:
+      # macOS builders. These are placed near the beginning because they are very
+      # slow to run.
 
-#       # OSX builders running tests, these run the full test suite.
-#       # NO_DEBUG_ASSERTIONS=1 to make them go faster, but also do have some
-#       # runners that run `//ignore-debug` tests.
-#       #
-#       # Note that the compiler is compiled to target 10.8 here because the Xcode
-#       # version that we're using, 8.2, cannot compile LLVM for OSX 10.7.
-#       x86_64-apple-build:
-#         RUST_CHECK_TARGET: check
-#         RUST_CONFIGURE_ARGS: --build=x86_64-apple-darwin --enable-sanitizers --enable-profiler --set rust.jemalloc
-#         RUSTC_RETRY_LINKER_ON_SEGFAULT: 1
-#         MACOSX_DEPLOYMENT_TARGET: 10.8
-#         MACOSX_STD_DEPLOYMENT_TARGET: 10.7
-#         NO_LLVM_ASSERTIONS: 1
-#         NO_DEBUG_ASSERTIONS: 1
-#         SCRIPT: make ci-test-prepare
+      # OSX builders running tests, these run the full test suite.
+      # NO_DEBUG_ASSERTIONS=1 to make them go faster, but also do have some
+      # runners that run `//ignore-debug` tests.
+      #
+      # Note that the compiler is compiled to target 10.8 here because the Xcode
+      # version that we're using, 8.2, cannot compile LLVM for OSX 10.7.
+      x86_64-apple-build:
+        RUST_CHECK_TARGET: check
+        RUST_CONFIGURE_ARGS: --build=x86_64-apple-darwin --enable-sanitizers --enable-profiler --set rust.jemalloc
+        RUSTC_RETRY_LINKER_ON_SEGFAULT: 1
+        MACOSX_DEPLOYMENT_TARGET: 10.8
+        MACOSX_STD_DEPLOYMENT_TARGET: 10.7
+        NO_LLVM_ASSERTIONS: 1
+        NO_DEBUG_ASSERTIONS: 1
+        SCRIPT: make ci-test-prepare
 
 - job: macOS_test
-  # dependsOn: macOS_build
+  dependsOn: macOS_build
   timeoutInMinutes: 600
   variables:
     TAR_COMMAND: gtar
@@ -357,22 +358,23 @@ jobs:
 
   - template: steps/show-disk-usage.yml
 
-  # - task: DownloadPipelineArtifact@1
-  #   inputs:
-  #     artifactName: $(ARTIFACT_NAME)
-  #     downloadPath: $(System.DefaultWorkingDirectory)
   - task: DownloadPipelineArtifact@1
     inputs:
       artifactName: $(ARTIFACT_NAME)
       downloadPath: $(System.DefaultWorkingDirectory)
-      buildType: specific
-      project: rust
-      pipeline: 8
-      buildVersionToDownload: specific
-      buildId: 200
+  # - task: DownloadPipelineArtifact@1
+  #   inputs:
+  #     artifactName: $(ARTIFACT_NAME)
+  #     downloadPath: $(System.DefaultWorkingDirectory)
+  #     buildType: specific
+  #     project: rust
+  #     pipeline: 8
+  #     buildVersionToDownload: specific
+  #     buildId: 200
 
   # - template: steps/macos.yml 
   - template: steps/show-disk-usage.yml
+  - bash: $TAR_COMMAND -tvf ./drop.tar
   - bash: $TAR_COMMAND -xf ./drop.tar
   - bash: rm ./drop.tar
   - template: steps/show-disk-usage.yml
