--- a/.azure-pipelines/steps/windows.yml
+++ b/.azure-pipelines/steps/windows.yml
@@ -2,6 +2,12 @@ steps:
 - checkout: self
   fetchDepth: 2
 
+- bash: |
+    set -x
+    git submodule
+    export SUBMODULES_EXCLUDES=$(git submodule | grep -Eow 'src/[^ ]+' | sed 's/\(.*\)/--exclude=\1\/\.git/')
+    echo "##vso[task.setvariable variable=SUBMODULES_EXCLUDES;]$SUBMODULES_EXCLUDES"
+    
 - script: |
     REM echo hack as drive D is too small
     IF NOT "%DISABLE_DISK_SPACE_HACK%"=="1" (
