--- a/.azure-pipelines/steps/windows.yml
+++ b/.azure-pipelines/steps/windows.yml
@@ -139,6 +139,8 @@ steps:
 - script: mkdir c:\tracetmp
 - script: |
     "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -start GeneralProfile -filemode -recordtempto c:\tracetmp
+- script: |
+    "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -status
 
 - script: |
     REM echo force the specific VS version https://github.com/johnterickson/rust/issues/8
@@ -152,8 +154,8 @@ steps:
 
     if not exist D:\cache\rustsrc\NUL mkdir D:\cache\rustsrc
     
-    sh src/ci/init_repo.sh . /d/cache/rustsrc
-    sh src/ci/run.sh
+    REM sh src/ci/init_repo.sh . /d/cache/rustsrc
+    REM sh src/ci/run.sh
   env:      
     CI: true
     CI_JOB_NAME: $(System.JobDisplayName)
@@ -171,10 +173,10 @@ steps:
     "C:\Program Files (x86)\Windows Kits\10\Windows Performance Toolkit\wpr.exe" -stop trace\trace.etl
 - task: PublishPipelineArtifact@0
   inputs:
-    artifactName: 'trace'
+    artifactName: "trace pa $(System.JobDisplayName)"
     targetPath: 'trace'
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: 'trace'
-    ArtifactName: 'tracefcs'
+    ArtifactName: "trace fcs $(System.JobDisplayName)"
     publishLocation: 'Container'
