--- a/.azure-pipelines/steps/windows.yml
+++ b/.azure-pipelines/steps/windows.yml
@@ -154,8 +154,8 @@ steps:
 
     if not exist D:\cache\rustsrc\NUL mkdir D:\cache\rustsrc
     
-    REM sh src/ci/init_repo.sh . /d/cache/rustsrc
-    REM sh src/ci/run.sh
+    sh src/ci/init_repo.sh . /d/cache/rustsrc
+    sh src/ci/run.sh
   env:      
     CI: true
     CI_JOB_NAME: $(System.JobDisplayName)
